--- a/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/orderlist/OrderXdmList.html
@@ -27,7 +27,7 @@
                                        
                                          <div class="col-sm-2">
                                             <select class="form-control show-tick " id="shDelNy" name="shDelNy">
-                                                <option  value="0" th:selected="${vo.shDelNy == null}">삭제여부</option>
+                                                <option  value="" th:selected="${vo.shDelNy == null}">삭제여부</option>
                                                 <option value="1"  th:selected="${vo.shDelNy == 1}">Y</option>
                                                 <option value="0"  th:selected="${vo.shDelNy == 0}">N</option>
                                                
