--- a/ahn/src/main/resources/templates/xdm/product/productXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/product/productXdmList.html
@@ -141,12 +141,13 @@
                                           	<th>신발이름</th>
                                             <th>신발사이즈</th>
                                             <th>신발브랜드</th>
+                                             <th>상품수량</th>
                                              <th>가격</th>
                                            	<th>신발타입</th>
                                             <th>판매상태</th>
                                             <th>등록일자</th>
                                             <th>수정일자</th>
-                                            <th>상품수량</th>
+                                           
                                            
                                             
                                            
@@ -172,6 +173,7 @@
                                             <td th:text="${@codeService.selectOneCachedCode(list.shSizeCd)}"></td>
                                             
                                             <td th:text="${@codeService.selectOneCachedCode(list.shBrandCd)}"></td>
+                                            <td th:text="${list.shCount}"></td>
                                              <td th:text="${list.shPrice}"></td>
                                             <td th:text="${@codeService.selectOneCachedCode(list.shTypeCd)}"></td>
 
@@ -179,7 +181,7 @@
                                             <td th:text="${list.regDateTime}"></td>
                                             <td th:text="${list.modDateTime}"></td>
                                             
-                                            <td th:text="${list.shCount}"></td>
+                                            
                                            
                                             
                                             
@@ -212,24 +214,20 @@
 								    
 								</div>
                               
-                                <a role="button" class="btn btn-danger waves-effect" style=" margin-right:  5px;" href="">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-                                    <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
-                                    </svg>
-                                </a>
-                                <a role="button" class="btn btn-danger" href="">
+                              
+                                <button type="button" class="btn btn-danger" href="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                                       </svg>
-                                    </a>
+                                    </button>
                                     <!-- 리스트 추가 버트 -->
                                 <!-- <button class="btn btn-primary" type="button" style="float: right; margin-right:  5px;" id="btnForm">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
                                       </svg>
                                     </button> -->
-                                <a class="btn btn-success" href="" role="button" style="float: right; margin-right:  5px;">
+                                <!-- <a class="btn btn-success" href="" role="button" style="float: right; margin-right:  5px;">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel" viewBox="0 0 16 16">
                                         <path d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z"/>
                                         <path d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2M9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
@@ -239,7 +237,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-type-underline" viewBox="0 0 16 16">
                                         <path d="M5.313 3.136h-1.23V9.54c0 2.105 1.47 3.623 3.917 3.623s3.917-1.518 3.917-3.623V3.136h-1.23v6.323c0 1.49-.978 2.57-2.687 2.57s-2.687-1.08-2.687-2.57zM12.5 15h-9v-1h9z"/>
                                       </svg>
-                                    </a>   
+                                    </a>  -->  
                                 
                             </div>
                         </div>
