--- a/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
+++ b/ahn/src/main/resources/templates/pda/includePda/sidebarPda.html
@@ -13,15 +13,15 @@
       <hr>
       </li>
       <li class="nav-item">
-        <a class="nav-link collapsed" >
+        <a class="nav-link collapsed" th:href="@{/LnboundPad}">
           <i class="bi bi-box-arrow-right"></i>
           <span>입고관리</span>
         </a>
       </li><!-- End Login Page Nav -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" >
+      <li class="nav-item" >
+        <a class="nav-link collapsed" th:href="@{/DeliveryPda}">
           <i class="bi bi-box-arrow-right"></i>
-          <span>출고관리</span>
+          <span>배송관리</span>
         </a>
       <hr>
       </li><!-- End Login Page Nav -->
