--- a/ahn/src/main/resources/templates/xdm/factoryorder/FactoryOrderXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/factoryorder/FactoryOrderXdmList.html
@@ -6,7 +6,7 @@
 	<form name="formList" id="formList" method="post" autocomplete="off">
 		<input type="hidden" name="thisPage" th:value="${vo.thisPage}" default="1"/>
 		<input type="hidden" id="rowNumToShow" name="rowNumToShow" th:value="${vo.rowNumToShow}"/>
-< 		<input type="hidden" name="shSeq">
+ 		<input type="hidden" name="shSeq">
     <section class="content">
         <div class="container-fluid">
             
@@ -25,10 +25,10 @@
                                 <div class="col-sm-12">
                                     <div class="row clearfix">
                                         <div class="col-sm-2">
-                                            <select class="form-control show-tick ">
-                                                <option >삭제여부</option>
-                                                <option>Y</option>
-                                                <option >N</option>
+                                            <select class="form-control show-tick "id="shDelNy" name="shDelNy">
+                                                <option value="" th:selected="${vo.shDelNy == null}">삭제여부</option>
+                                                <option value="1" th:selected="${vo.shDelNy == 1}">Y</option>
+                                                <option value="0" th:selected="${vo.shDelNy == 0}">N</option>
                                                
                                             </select>
                                             
@@ -43,9 +43,9 @@
                                             
                                         </div> -->
                                           <div class="col-sm-2">
-                                            <select class="form-control show-tick " >
-                                                <option>날짜</option>
-                                                <option>주문일</option>
+                                            <select class="form-control show-tick " id="shOptionDate" name="shOptionDate" >
+                                                <option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
+                                                <option value="1" th:selected="${vo.shOptionDate == 1}">발주일</option>
                                                     
                                             </select>
                                             
@@ -53,14 +53,18 @@
                                          <div class="col-sm-2">
 										    <div class="form-group">
 										        <div class="form-line">
-										            <input type="text" class="form-control"  placeholder="YYYY-MM-DD" autocomplete="off"/>
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateStart != null && #strings.length(vo.shDateStart) >= 10 ? #strings.substring(vo.shDateStart, 0, 10) : vo.shDateStart}"
+										                   id="shDateStart" name="shDateStart" placeholder="시작일" autocomplete="off"/>
 										        </div>
 										    </div>
 										</div>
-										 <div class="col-sm-2">
+										<div class="col-sm-2">
 										    <div class="form-group">
 										        <div class="form-line">
-										            <input type="text" class="form-control"  placeholder="YYYY-MM-DD" autocomplete="off"/>
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateEnd != null && #strings.length(vo.shDateEnd) >= 10 ? #strings.substring(vo.shDateEnd, 0, 10) : vo.shDateEnd}"
+										                   id="shDateEnd" name="shDateEnd" placeholder="종료일" autocomplete="off"/>
 										        </div>
 										    </div>
 										</div>
@@ -87,17 +91,22 @@
                                     <div class="row clearfix">
                                     
                                         <div class="col-sm-2">
-                                            <select class="form-control show-tick ">
-                                                <option >검색구분</option>
-                                                <option >발주번호</option>
-                                               
+                                            <select class="form-control show-tick" id="shOption" name="shOption">
+                                                <option value="" th:selected="${vo.shOption == null}">검색구분</option>
+                                                <option value="1" th:selected="${vo.shOption == 1}">신발이름</option>
+                                               	<option value="2" th:selected="${vo.shOption == 2}">신발브랜드</option>
+                                               	<option value="3" th:selected="${vo.shOption == 3}">신발사이즈</option>
+                                               	<option value="4" th:selected="${vo.shOption == 4}">신발타입</option>
+                                               	<option value="5" th:selected="${vo.shOption == 5}">발주자</option>
+                                               	
+                                               	
                                                 
                                             </select>
                                         </div>
                                         <div class="col-sm-2">
                                             <div class="form-group">
                                                 <div class="form-line">
-                                                    <input type="text" class="form-control"  placeholder="검색어" />
+                                                    <input type="text" class="form-control"  id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" />
                                                 	
                                                 </div>
                                             </div>
@@ -109,21 +118,21 @@
 										            &nbsp; <label style="font-weight: bold; margin-bottom: 0; min-width: 80px;">발주상태</label>
 										
 										            <div class="form-check">
-										                <input class="form-check-input" type="radio" name="radioDefault" id="radioDefault1" checked>
+										                <input class="form-check-input" type="radio" name="orderS" id="radioDefault1" value="" th:checked="${vo.orderS == null}" checked>
 										                <label class="form-check-label" for="radioDefault1">
 										                    전체
 										                </label>
 										            </div>
 										
 										            <div class="form-check">
-										                <input class="form-check-input" type="radio" name="radioDefault" id="radioDefault2">
+										                <input class="form-check-input" type="radio" name="orderS" id="radioDefault2" value="26" th:checked="${vo.orderS == 26}">
 										                <label class="form-check-label" for="radioDefault2">
 										                    입고대기
 										                </label>
 										            </div>
 										
 										            <div class="form-check">
-										                <input class="form-check-input" type="radio" name="radioDefault" id="radioDefault3">
+										                <input class="form-check-input" type="radio" name="orderS" id="radioDefault3" value="27" th:checked="${vo.orderS == 27}">
 										                <label class="form-check-label" for="radioDefault3">
 										                    입고완료
 										                </label>
@@ -167,12 +176,12 @@
                                         </div>					<!-- js-basic-example 들어가면 페이징 가능-->
                             			<div class="col-sm-2"  style="float: right;">
                                             <select class="form-select form-select-sm" id="changeRowNum" name="changeRowNum" >
-												<option value="5" >5</option>
-												<option value="10" >10</option>
-												<option value="30" >30</option>
-												<option value="50" >50</option>
-												<option value="80" >80</option>
-												<option value="100">100</option>       
+												<option value="5" th:selected="${vo.rowNumToShow eq 5}">5</option>
+												<option value="10" th:selected="${vo.rowNumToShow eq 10}">10</option>
+												<option value="30" th:selected="${vo.rowNumToShow eq 30}">30</option>
+												<option value="50" th:selected="${vo.rowNumToShow eq 50}">50</option>
+												<option value="80" th:selected="${vo.rowNumToShow eq 80}">80</option>
+												<option value="100" th:selected="${vo.rowNumToShow eq 100}">100</option>       
 											</select>
                                         </div>
                                 <table class="table table-bordered table-striped table-hover  dataTable">
@@ -269,8 +278,8 @@
                                 <button class="btn btn-primary" type="button" style="float: right; margin-right:  5px;" id="btnForm">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
-                                      </svg>
-                                    </button> 
+                                       </svg>
+                                   	 </button> 
 <!--                                 <a class="btn btn-success" href="" role="button" style="float: right; margin-right:  5px;"> -->
 <!--                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel" viewBox="0 0 16 16"> -->
 <!--                                         <path d="M5.884 6.68a.5.5 0 1 0-.768.64L7.349 10l-2.233 2.68a.5.5 0 0 0 .768.64L8 10.781l2.116 2.54a.5.5 0 0 0 .768-.641L8.651 10l2.233-2.68a.5.5 0 0 0-.768-.64L8 9.219l-2.116-2.54z"/> -->
@@ -409,28 +418,28 @@
     </script>
     
      <script type="text/javascript">
-//     //달력 
-//     $.datetimepicker.setLocale('ko'); //번역기
-//     jQuery(function(){
-//     	 jQuery('#shDateStart').datetimepicker({
-//     	  format:'Y/m/d',
-//     	  onShow:function( ct ){
-//     	   this.setOptions({
-//     	    maxDate:jQuery('#shDateEnd').val()?jQuery('#shDateEnd').val():false
-//     	   })
-//     	  },
-//     	  timepicker:false
-//     	 });
-//     	 jQuery('#shDateEnd').datetimepicker({
-//     	  format:'Y/m/d',
-//     	  onShow:function( ct ){
-//     	   this.setOptions({
-//     	    minDate:jQuery('#shDateStart').val()?jQuery('#shDateStart').val():false
-//     	   })
-//     	  },
-//     	  timepicker:false
-//     	 });
-//     	});
+    //달력 
+    $.datetimepicker.setLocale('ko'); //번역기
+    jQuery(function(){
+    	 jQuery('#shDateStart').datetimepicker({
+    	  format:'Y/m/d',
+    	  onShow:function( ct ){
+    	   this.setOptions({
+    	    maxDate:jQuery('#shDateEnd').val()?jQuery('#shDateEnd').val():false
+    	   })
+    	  },
+    	  timepicker:false
+    	 });
+    	 jQuery('#shDateEnd').datetimepicker({
+    	  format:'Y/m/d',
+    	  onShow:function( ct ){
+    	   this.setOptions({
+    	    minDate:jQuery('#shDateStart').val()?jQuery('#shDateStart').val():false
+    	   })
+    	  },
+    	  timepicker:false
+    	 });
+    	});
     
     </script>
 </body>
