--- a/ahn/src/main/resources/templates/xdm/product/productXdmList.html
+++ b/ahn/src/main/resources/templates/xdm/product/productXdmList.html
@@ -45,8 +45,8 @@
                                           <div class="col-sm-2">
                                             <select class="form-control show-tick" id="shOptionDate" name="shOptionDate" >
                                                 <option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
-                                                <option value="1" th:selected="${vo.shOptionDate == 1}">등록일자</option>
-                                                <option value="2" th:selected="${vo.shOptionDate == 2}">수정일자</option>    
+                                                <option value="1" th:selected="${vo.shOptionDate == 1}">등록일</option>
+                                                <option value="2" th:selected="${vo.shOptionDate == 2}">수정일</option>    
                                                     
                                             </select>
                                             
@@ -54,7 +54,18 @@
                                          <div class="col-sm-2">
 										    <div class="form-group">
 										        <div class="form-line">
-										            <input type="text" class="form-control"  placeholder="주문일" autocomplete="off"/>
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateStart != null && #strings.length(vo.shDateStart) >= 10 ? #strings.substring(vo.shDateStart, 0, 10) : vo.shDateStart}"
+										                   id="shDateStart" name="shDateStart" placeholder="시작일" autocomplete="off"/>
+										        </div>
+										    </div>
+										</div>
+										<div class="col-sm-2">
+										    <div class="form-group">
+										        <div class="form-line">
+										            <input type="text" class="form-control" 
+										                   th:value="${vo.shDateEnd != null && #strings.length(vo.shDateEnd) >= 10 ? #strings.substring(vo.shDateEnd, 0, 10) : vo.shDateEnd}"
+										                   id="shDateEnd" name="shDateEnd" placeholder="종료일" autocomplete="off"/>
 										        </div>
 										    </div>
 										</div>
@@ -88,7 +99,7 @@
                                         <div class="col-sm-2">
                                             <div class="form-group">
                                                 <div class="form-line">
-                                                    <input type="text" class="form-control"  placeholder="검색어" />
+                                                    <input type="text" class="form-control"  id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" />
                                                 	
                                                 </div>
                                             </div>
@@ -179,7 +190,7 @@
                                             
                                             <td th:text="${@codeService.selectOneCachedCode(list.shBrandCd)}"></td>
                                             <td th:text="${list.shCount}"></td>
-                                             <td th:text="${list.shPrice}"></td>
+                                            <td th:text="${list.shPrice}"></td>
                                             <td th:text="${@codeService.selectOneCachedCode(list.shTypeCd)}"></td>
 
                                             <td th:text="${@codeService.selectOneCachedCode(list.salesStatus)}"></td>
@@ -229,7 +240,7 @@
                                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                                       </svg>
-                                    </button>
+                                    </a>
                                     <!-- 리스트 추가 버트 -->
 <!--                                 <button class="btn btn-primary" type="button" style="float: right; margin-right:  5px;" id="btnForm"> -->
 <!--                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16"> -->
